Closed Bug 434102 Opened 17 years ago Closed 11 years ago

Tree row styling: outline is far larger than border

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: tonymec, Assigned: dbaron)

Details

Attachments

(1 file)

Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9pre) Gecko/2008051602 SeaMonkey/2.0a1pre Styling tree rows: weird results with "outline" as compared to "border". Reproducible: Always Steps to Reproduce: 1. Copy the following into your userChrome.css for SeaMonkey (or, presumably, Thunderbird): treechildren::-moz-tree-row(current) { outline: 1px dotted green !important ; border: 2px solid yellow !important } 2. Restart the mailer. 3. Go to a folder or newsgroup with several messages 4. Make the List pane current 5. Hit Ctrl+Down and/or Ctrl+Up one or more times. Actual results: - The yellow rectangle ("border") surrounds the current line only; - The green dotted rectangle ("outline") surrounds the block of all lines from the current message all the way down to the bottom of the pane. Expected results: The "border" and the "outline" should surround (at maybe a few pixels' distance) the same area, in this case the current line only.
Component: Layout: Block and Inline → XP Toolkit/Widgets: Trees
QA Contact: layout.block-and-inline → xptoolkit.trees
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: xptoolkit.trees → xptoolkit.widgets
This was a regression from bug 133165 which I noticed while working on bug 480888, but wished to fix in a separate patch (despite that it would have been slightly easier to fix it in the same patch).
Attachment #8376956 - Flags: review?(roc)
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Also note that I believe this will change some actual rendering in the Firefox UI on Windows only, because when I was working on bug 480888, I had a try push with an assertion that I think fired only on Windows. I expect it's some pretty obscure UI, though.
And marked the reftest as failing on Mac (where the text gets aligned differently between the border case and the outline case): https://hg.mozilla.org/integration/mozilla-inbound/rev/772392d933ea
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: