layout/base/nsCSSRendering.cpp
@@ -614,15 +614,10 @@ nsCSSRendering::PaintOutline(nsPresContext* aPresContext,
       false
 #endif
      ) {
-    // FIXME: This behavior doesn't make sense; we should switch back to
-    // using aBorderArea.  But since this has been broken since bug
-    // 133165 in August of 2004, that switch should be made in its own
-    // patch changing only that behavior.
-    innerRect = aForFrame->GetVisualOverflowRect();
+    innerRect = aBorderArea;
   } else {
-    innerRect = GetOutlineInnerRect(aForFrame);
+    innerRect = GetOutlineInnerRect(aForFrame) + aBorderArea.TopLeft();
   }
-  innerRect += aBorderArea.TopLeft();
   nscoord offset = ourOutline->mOutlineOffset;
   innerRect.Inflate(offset, offset);
   // If the dirty rect is completely inside the border area (e.g., only the
